Fix the z-index of the offline banner

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -40,6 +40,7 @@
 
   .offline-mode-banner {
     position: absolute;
+    z-index: 9999;
     bottom: 0;
     left: 0;
     width: 100%;
